Refactor components and add setters to word list context

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,20 +1,14 @@
-.Wrapper {
+.App-Wrapper {
   display: flex;
-  border: thin solid red;
   height: 100vh;
 }
 
-.AutoSuggest {
-  display: flex;
-  border: thin solid green;
+.App-Section {
   flex: 3;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
-.SuggestList {
+.App-Aside {
+  display: flex;
   flex: 1;
-  border: thin solid blue;
-  padding: 10px;
+  flex-direction: column;
 }
